[gd_scene load_steps=9 format=3 uid="uid://bbsmii62b4idp"]

[ext_resource type="Script" path="res://BackGroundMainMenu/background.gd" id="1_0tr6d"]
[ext_resource type="Texture2D" uid="uid://rjl254efgbb3" path="res://BackGroundMainMenu/1.png" id="2_0jms3"]
[ext_resource type="Texture2D" uid="uid://de3vdsikyreb" path="res://BackGroundMainMenu/Clouds1.png" id="3_oyan0"]
[ext_resource type="Texture2D" uid="uid://b6kjm3ry1k60j" path="res://BackGroundMainMenu/Clouds2.png" id="4_ao748"]
[ext_resource type="Texture2D" uid="uid://bhoipb30188v1" path="res://BackGroundMainMenu/CloudIsland.png" id="5_obfxp"]
[ext_resource type="Texture2D" uid="uid://bib7fm8e6rw02" path="res://BackGroundMainMenu/Clouds3.png" id="5_rx80l"]
[ext_resource type="Texture2D" uid="uid://lju3rqbx2ee6" path="res://BackGroundMainMenu/Clouds4.png" id="6_gxpxo"]
[ext_resource type="FontFile" uid="uid://beqfhojjprfm4" path="res://Fonts/manito-lp.otf" id="8_amus8"]

[node name="BackGround" type="Node2D"]
script = ExtResource("1_0tr6d")

[node name="ParallaxBackground5" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground5"]
motion_mirroring = Vector2(1228, 0)

[node name="1" type="Sprite2D" parent="ParallaxBackground5/ParallaxLayer"]
position = Vector2(643, 359)
scale = Vector2(2.23958, 2.23457)
texture = ExtResource("2_0jms3")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1228, 0)

[node name="Clouds1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(643, 360)
scale = Vector2(0.858667, 0.8)
texture = ExtResource("3_oyan0")

[node name="ParallaxBackground6" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground6"]
motion_mirroring = Vector2(1500, 0)

[node name="CloudIsland" type="Sprite2D" parent="ParallaxBackground6/ParallaxLayer"]
position = Vector2(1112, 368)
texture = ExtResource("5_obfxp")

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_mirroring = Vector2(1228, 0)

[node name="Clouds2" type="Sprite2D" parent="ParallaxBackground2/ParallaxLayer3"]
position = Vector2(645, 360)
scale = Vector2(0.857333, 0.8)
texture = ExtResource("4_ao748")

[node name="ParallaxBackground3" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground3"]
motion_mirroring = Vector2(1228, 0)

[node name="Clouds3" type="Sprite2D" parent="ParallaxBackground3/ParallaxLayer4"]
position = Vector2(644, 360)
scale = Vector2(0.858667, 0.8)
texture = ExtResource("5_rx80l")

[node name="ParallaxBackground4" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground4"]
motion_mirroring = Vector2(1228, 0)

[node name="Clouds4" type="Sprite2D" parent="ParallaxBackground4/ParallaxLayer5"]
position = Vector2(648, 360)
scale = Vector2(0.864, 0.8)
texture = ExtResource("6_gxpxo")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_right = 1280.0
offset_bottom = 192.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.313726, 0.784314, 0.470588, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.243137, 0.705882, 0.537255, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 30
theme_override_fonts/font = ExtResource("8_amus8")
theme_override_font_sizes/font_size = 61
text = "My rebirth into a game"
horizontal_alignment = 1
vertical_alignment = 1
